# sdkvers

./: .gitignore  API_TODO.md  COLOR-TTY.md  Cargo.toml  DEVELOPER.md  LICENSE.txt  README.md  SDKALT-HOOKS.md  SDKALT-IMPL.md  SDKALT-RESEARCH.md  SDKALT.md  SPEC.md  TODO.md  VERSIONS.md  fetch_hooks.py  justfile  sdkvers-init.sh  sdkvers-resolve
.github/workflows/: ci.yml  release.yml
crates/broker/: Cargo.toml
crates/broker/src/: candidates.rs  client.rs  download.rs  hooks.rs  lib.rs
crates/broker/tests/: broker_tests.rs
crates/ops/: Cargo.toml
crates/ops/src/: activate.rs  current.rs  default.rs  install.rs  lib.rs  list.rs  uninstall.rs  use_.rs
crates/ops/tests/: ops_tests.rs
crates/sdkvers/: Cargo.toml
crates/sdkvers/src/: lib.rs  main.rs
crates/sdkvers/tests/: integration.rs
crates/sdkvers/tests/fixtures/sdk_list/: ant.txt  groovy.txt  java.txt  kotlin.txt  micronaut.txt  sbt.txt  springboot.txt
crates/store/: Cargo.toml
crates/store/src/: candidates.rs  extraction.rs  lib.rs  symlinks.rs
crates/store/tests/: store_tests.rs
crates/types/src/: lib.rs
src/: lib.rs  main.rs
tests/: integration.rs
tests/fixtures/sdk_list/: gradle.txt  maven.txt  scala.txt
