[package]
name = "sdkvers"
version = "1.1.0"
edition = "2024"
authors = ["John Vasileff"]
license = "MIT"

[lib]
name = "sdkvers"
path = "src/lib.rs"

[[bin]]
name = "sdkvers-resolve"
path = "src/main.rs"

[dependencies]
types = { path = "../types" }
store = { path = "../store" }
broker = { path = "../broker" }
ops = { path = "../ops" }
owo-colors = "4"
